--- a/mission2RyanPinkney/Views/Main/GradeCal.cshtml
+++ b/mission2RyanPinkney/Views/Main/GradeCal.cshtml
@@ -11,7 +11,7 @@
 <h3 style="text-align: center; display: inline-block; ">Grade Calculator</h3>
 <br />
 <form style="text-align: center; display: inline-block; ">
-    <lable>Please enter your grade as a percentage.</lable> <!--Place for the user to input the grade percentage-->
+    <label>Please enter your grade as a percentage.</label> <!--Place for the user to input the grade percentage-->
     <input id="percent" type="text" />
     <input id="cal" type="button" value="Calculate Grade" /> <!--Button to submit the information in the form-->
 </form>
