--- a/mission2RyanPinkney/Views/Shared/_Layout.cshtml
+++ b/mission2RyanPinkney/Views/Shared/_Layout.cshtml
@@ -24,10 +24,12 @@
 
 
 
-        @RenderBody()
+    @RenderBody()
 
-
+    <!--Import the different js files to my index page.-->
     <script src="lib/jquery/jquery-3.6.0.min.js"></script>
     <script src="js/gradecalculator.js"></script>
 </body>
 </html>
+
+<!--Gittest1-->
