--- a/mission2RyanPinkney/Views/Shared/_Layout.cshtml
+++ b/mission2RyanPinkney/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <!--Add the favicon-->
     <link rel="icon" href="img/download.png">
 </head>
-<body style="text-align: center; display: inline-block; ">
+<body style="text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%; ">
 
     <nav>
         <a asp-controller="Main" asp-action="Index">Home</a>
@@ -31,3 +31,5 @@
     <script src="js/gradecalculator.js"></script>
 </body>
 </html>
+
+<!--testformission3git-->
