--- a/mission2RyanPinkney/Views/Main/GradeCal.cshtml
+++ b/mission2RyanPinkney/Views/Main/GradeCal.cshtml
@@ -8,9 +8,9 @@
 
 
 <!--Grade calcualtor form-->
-<h3 style="text-align: center; display: inline-block; text-align: center; list-style-position: inside; margin-left: 20%; margin-right: 20%; ">Grade Calculator</h3>
+<h3 style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;">Grade Calculator</h3>
 <br />
-<form style="text-align: center; display: inline-block; text-align: center; list-style-position: inside;">
+<form style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;">
     <label>Please enter your grade as a percentage.</label> <!--Place for the user to input the grade percentage-->
     <input id="percent" type="text" />
     <input id="cal" type="button" value="Calculate Grade" /> <!--Button to submit the information in the form-->
