--- a/mission2RyanPinkney/Views/Shared/_Layout.cshtml
+++ b/mission2RyanPinkney/Views/Shared/_Layout.cshtml
@@ -14,8 +14,7 @@
     <!--Add the favicon-->
     <link rel="icon" href="img/download.png">
 </head>
-<body style="text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%; ">
-
+<body>
     <nav>
         <a asp-controller="Main" asp-action="Index">Home</a>
         <a asp-controller="Main" asp-action="GradeCal">Grade Calculator</a>
