--- a/mission2RyanPinkney/Views/Main/GradeCal.cshtml
+++ b/mission2RyanPinkney/Views/Main/GradeCal.cshtml
@@ -13,14 +13,14 @@
 <br />
 <form style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;" method="POST">
     <label>Assignments</label> <!--Place for the user to input the grade percentage-->
-    <input id="iAssignment" type="text" asp-for="iAssignment" />
+    <input id="iAssignment" type="text" asp-for="iAssignment" /><br /><br />
     <label>Group Project</label> <!--Place for the user to input the grade percentage-->
-    <input id="iGroupProject" type="text" asp-for="iGroupProject" />
+    <input id="iGroupProject" type="text" asp-for="iGroupProject" /><br /><br />
     <label>Quizzes</label> <!--Place for the user to input the grade percentage-->
-    <input id="iQuizzes" type="text" asp-for="iQuizzes" />
+    <input id="iQuizzes" type="text" asp-for="iQuizzes" /><br /><br />
     <label>Exams</label> <!--Place for the user to input the grade percentage-->
-    <input id="iExams" type="text" asp-for="iExams" />
+    <input id="iExams" type="text" asp-for="iExams" /><br /><br />
     <label>INTEX</label> <!--Place for the user to input the grade percentage-->
-    <input id="iINTEX" type="text" asp-for="iINTEX" />
+    <input id="iINTEX" type="text" asp-for="iINTEX" /><br /><br />
     <input id="cal" type="submit" value="Calculate Grade" /> <!--Button to submit the information in the form-->
 </form>
