--- a/mission2RyanPinkney/Views/_ViewImports.cshtml
+++ b/mission2RyanPinkney/Views/_ViewImports.cshtml
@@ -1,4 +1,10 @@
-﻿@namespace mission2RyanPinkney.Views
+﻿<!--
+Author: Ryan Pinkney
+Auto-imported file from the template library
+
+-->
+
+@namespace mission2RyanPinkney.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using mission2RyanPinkney.Models
- 
+@using mission2RyanPinkney.Models <!--Set the models for all the html pages-->
+
