--- a/mission2RyanPinkney/Views/Main/Index.cshtml
+++ b/mission2RyanPinkney/Views/Main/Index.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-
+    // Razor code to set the title for this page
     ViewData["Title"] = "Mission 3 Ryan Pinkney";
 
 }
