--- a/mission2RyanPinkney/Views/Shared/_Layout.cshtml
+++ b/mission2RyanPinkney/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@ Author: Ryan Pinkney
     <link href="~/css/styles.css" rel="stylesheet" />
 
     <!--Add the favicon-->
-    <link rel="icon" href="img/download.png">
+    <link rel="icon" href="~/img/download.png">
 </head>
 <body>
 
