--- a/mission2RyanPinkney/Views/Main/GradeCal.cshtml
+++ b/mission2RyanPinkney/Views/Main/GradeCal.cshtml
@@ -16,7 +16,7 @@ This is the grade calculator html page which will display a form to calculate th
 <!--Grade calcualtor form-->
 <h3 style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;">Grade Calculator</h3>
 <br />
-<form style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;" method="POST">
+<form method="POST">
 
     <!--Label and input for assignments-->
     <label>Assignments</label>
