--- a/mission2RyanPinkney/Views/Main/GradeCal.cshtml
+++ b/mission2RyanPinkney/Views/Main/GradeCal.cshtml
@@ -14,8 +14,8 @@ This is the grade calculator html page which will display a form to calculate th
 <!--Razor code to import the model-->
 @model GradeCal;
 <!--Grade calcualtor form-->
-<h3 style="style=" text-align: center; display: inline-block; margin-left: 30%; margin-right: 20%;">Grade Calculator</h3>
-<br />
+<h3>Grade Calculator</h3>
+<br /><br />
 <form method="POST">
 
     <!--Label and input for assignments-->
